# cargo-expand

./: .clippy.toml  .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: ci.yml  install.yml
src/: assets.rs  cmd.rs  color.rs  config.rs  edit.rs  error.rs  etcetera.rs  filter.rs  fmt.rs  main.rs  manifest.rs  opts.rs  unparse.rs  version.rs
src/etcetera/: app_strategy.rs  base_strategy.rs  lib.rs  mod.rs
src/etcetera/app_strategy/: apple.rs  unix.rs  windows.rs  xdg.rs
src/etcetera/base_strategy/: apple.rs  windows.rs  xdg.rs
tests/: Cargo.toml  lib.expand.rs  lib.rs
